@@ -115,12 +115,6 @@ void Frame::cleanupPlatformScriptObjects()
 {
 }
 
-bool Frame::isCharacterSmartReplaceExempt(UChar, bool)
-{
-    // no smart replace
-    return true;
-}
-
 DragImageRef Frame::dragImageForSelection() 
 {
     return 0;
